Fixed custom cursor when horizontal scrolling

--- a/styles/components/About.module.css
+++ b/styles/components/About.module.css
@@ -52,6 +52,7 @@
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
+    transition: filter var(--theme-transition) ease-in-out, transform 0.5s ease-in-out;
 }
 .imageContainer:hover .image {
     filter: grayscale(0);
@@ -62,6 +63,9 @@
 
 .imageContainer:hover .imageWrapper {
     opacity: 1;
+}
+.imageContainer:hover .imageWrapper .image {
+    transform: scale(1.1);
 }
 .textContainer {
     order: 1;
@@ -95,6 +99,7 @@
     color: var(--accent-color);
     margin-bottom: 2rem;
     text-align: center;
+    text-transform: capitalize;
 }
 
 .imageIcon {
